--- a/index.html
+++ b/index.html
@@ -4,48 +4,42 @@
     <title>Guessing Game</title>
 
     <!-- Bootstrap and CSS here-->
-    <style>
-      .center {
-        text-align: center;
-      }
-      ul {
-          list-style: none;
-          padding: 0;
-      }
-      img {
-          display: inline;
-          width: 200px;
-          height: 100px;
-      }
-      #footer {
-          width: 100%;
-          border-top: solid 2px black;
-          background-color: white;
-          position: fixed;
-          bottom: 0;
-      }
-    </style>
 
+    <link type="text/css" rel="stylesheet" href="style.css" >
   </head>
   <body>
 
       <div id='app'>
 
         <div id='headers'>
-          <!-- Title and subtitles! -->
+            <!-- Title and subtitles! -->
+            <h1 id="tittle">Guessing Game!</h1>
+            <h2 id="subtittle">Guess a number between 0 and 100</h2>
         </div>
 
         <div id='main'>
           <div id='input-parent'>
             <!-- Player's guess input, and submit button -->
+            <label for="your-guess"> Enter Number </label>
+            <input type="text" id="your-guess" autofocus placeholder="0" maxlength=3>
+            <input type ="submit" value="your guess">
+
+
           </div>
 
           <div id='guesses'>
+
             <!-- unordered list of guesses -->
+            <ul>
+              <li> 200</li>
+              <li> 240 </li>
+            </ul>
           </div>
 
           <div id="menu-btns">
-            <!-- reset and hint buttons -->
+              <!-- reset and hint buttons -->
+              <button>Reset</button>
+              <button>Hint</button>
           </div>
         </div>
       </div>
@@ -59,7 +53,7 @@
           </div>
 
           <div class=''>
-            <h4>Project by YOUR NAME HERE</h4>
+            <h4>Project by Konstantinos Pouliasis</h4>
           </div>
 
           <div class=''>
